fix image alignment

--- a/screen.css
+++ b/screen.css
@@ -52,7 +52,7 @@ p, code {
 .compPic img {
     display: block;
     width: 100%;
-    height: 100%;
+    bottom: 0;
     border-radius: 20px;
 }
 
